src/objects/Employee_Engagement__c.object
<CustomObject>
    <fields>
        <fullName>Business_Plan__c</fullName>
        <label>Business Plan</label>
        <picklist>
            <controllingField>Category__c</controllingField>
            <picklistValues>
                <fullName>Short</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Long</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Battery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distribution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee Engagement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Plan</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Employee Engagement</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employee Engagements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Category_should_be_Employee_Engagement</fullName>
        <active>true</active>
        <errorConditionFormula>NOT( ISPICKVAL( Category__c , &quot;Employee Engagement&quot;) )</errorConditionFormula>
        <errorMessage>Category should be Employee Engagement</errorMessage>
    </validationRules>
</CustomObject>